[package]
name = "framework-python"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
framework-common = { path = "../framework-common" }
framework-spark-connect = { path = "../framework-spark-connect" }

[lib]
crate-type = ["cdylib"]
