[package]
name = "sail-cache"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common-datafusion = { path = "../sail-common-datafusion" }

datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
