[package]
name = "sail-catalog-glue"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-catalog = { path = "../sail-catalog" }

arrow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-glue = { workspace = true }
aws-smithy-types = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
