[package]
name = "sail-catalog-hms"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-catalog = { path = "../sail-catalog" }
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }

arrow = { workspace = true }
async-trait = { workspace = true }
bitflags = "2.10.0"
chrono = { workspace = true }
datafusion = { workspace = true }
hive_metastore = "0.2.0"
libloading = "0.8.9"
pilota = "0.11.10"
tokio = { workspace = true }
volo = "0.10.6"
volo-thrift = "0.10.8"

[dev-dependencies]
arrow = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
