[package]
name = "sail-catalog-iceberg"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-catalog = { path = "../sail-catalog" }

async-trait = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
