[package]
name = "sail-catalog-memory"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-catalog = { path = "../sail-catalog" }

async-trait = { workspace = true }
dashmap = { workspace = true }
