[package]
name = "sail-catalog-system"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-catalog = { path = "../sail-catalog" }

datafusion = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
regex = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
lazy_static = { workspace = true }
