[package]
name = "sail-catalog-unity"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-catalog = { path = "../sail-catalog" }
sail-common = { path = "../sail-common" }

async-trait = { workspace = true }
arrow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
progenitor-client = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
progenitor = { workspace = true }
prettyplease = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }