# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sail-catalog-unity"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-catalog = { path = "../sail-catalog" }
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }

async-trait = { workspace = true }
arrow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
progenitor-client = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
progenitor = { workspace = true }
prettyplease = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
