[package]
name = "sail-cli"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "sail"
path = "src/main.rs"

[features]
default = ["mimalloc"]

[dependencies]
sail-common = { path = "../sail-common" }
sail-execution = { path = "../sail-execution" }
sail-telemetry = { path = "../sail-telemetry" }
sail-spark-connect = { path = "../sail-spark-connect" }

mimalloc = { version = "0.1.43", default-features = false, optional = true }
clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
fastrace = { workspace = true }
pyo3 = { workspace = true }
