[package]
name = "sail-cli"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "sail"
path = "src/main.rs"

[features]
mimalloc = ["dep:mimalloc"]
default = ["mimalloc"]

[dependencies]
sail-common = { path = "../sail-common" }
sail-execution = { path = "../sail-execution" }
sail-telemetry = { path = "../sail-telemetry" }
sail-spark-connect = { path = "../sail-spark-connect" }

mimalloc = { workspace = true, optional = true }
clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
rustls = { workspace = true }
