[package]
name = "sail-cli"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "sail"
path = "src/main.rs"

[features]
mimalloc = ["dep:mimalloc"]
default = ["mimalloc"]

[dependencies]
sail-common = { path = "../sail-common" }
sail-execution = { path = "../sail-execution" }
sail-flight = { path = "../sail-flight" }
sail-telemetry = { path = "../sail-telemetry" }
sail-spark-connect = { path = "../sail-spark-connect" }
sail-session = { path = "../sail-session" }

# TODO: Drop "v2" after:
#       - libmimalloc-sys vendors the fix for https://github.com/microsoft/mimalloc/issues/1287 and
#       - exposes MI_TLS_MODEL_LOCAL for macOS coexistence https://github.com/microsoft/mimalloc/issues/1301
mimalloc = { workspace = true, optional = true, features = ["v2"] }
clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
rustls = { workspace = true }
