[package]
name = "sail-common-datafusion"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }

chrono = { workspace = true }
ryu = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
thiserror = { workspace = true }
either = { workspace = true }
lexical-core = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true }
serde_arrow = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
