[package]
name = "sail-common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
ryu = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
glob = { workspace = true }
pyo3 = { workspace = true }
lexical-core = { workspace = true }
num_enum = { workspace = true }
sqlparser = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
half = { workspace = true }
log = { workspace = true }
iana-time-zone = { workspace = true }
