[package]
name = "sail-data-source"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-delta-lake = { path = "../sail-delta-lake" }

async-trait = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
object_store = { workspace = true }
chumsky = { workspace = true }
glob = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
percent-encoding = { workspace = true }
once_cell = { workspace = true }
deltalake = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
regex = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
