[package]
name = "sail-data-source"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common-datafusion = { path = "../sail-common-datafusion" }

async-trait = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-session = { workspace = true }
object_store = { workspace = true }
chumsky = { workspace = true }
glob = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
percent-encoding = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
regex = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
