[package]
name = "sail-data-source"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-physical-plan = { path = "../sail-physical-plan" }
sail-sql-analyzer = { path = "../sail-sql-analyzer" }
sail-pyarrow = { path = "../sail-pyarrow" }

async-trait = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-datasource-avro = { workspace = true }
datafusion-datasource-json = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-session = { workspace = true }
object_store = { workspace = true }
chumsky = { workspace = true }
glob = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
percent-encoding = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
pyo3 = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
educe = { workspace = true }

[build-dependencies]
sail-build-scripts = { path = "../sail-build-scripts" }
