[package]
name = "sail-delta-lake"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }

# Delta Lake
deltalake = { workspace = true }
delta_kernel = { workspace = true }

# DataFusion dependencies
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-physical-expr = { workspace = true }

# Arrow dependencies
arrow-schema = { workspace = true }

# Essential utilities
async-trait = { workspace = true }
object_store = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
uuid = { workspace = true }
parquet = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
