[package]
name = "sail-duck-lake"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sail-common-datafusion = { path = "../sail-common-datafusion" }

serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-datasource = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
log = { workspace = true }
diesel = { workspace = true }
r2d2 = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

