[package]
name = "sail-execution"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-server = { path = "../sail-server" }
sail-plan = { path = "../sail-plan" }
sail-python-udf = { path = "../sail-python-udf" }

thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
datafusion-functions-json = { workspace = true }
arrow-flight = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rand = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
