[package]
name = "sail-execution"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-data-source = { path = "../sail-data-source" }
sail-server = { path = "../sail-server" }
sail-python-udf = { path = "../sail-python-udf" }
sail-object-store = { path = "../sail-object-store" }
sail-delta-lake = { path = "../sail-delta-lake" }
sail-function = { path = "../sail-function" }
sail-logical-plan = { path = "../sail-logical-plan" }
sail-physical-plan = { path = "../sail-physical-plan" }
sail-python-datasource = { path = "../sail-python-datasource" }

thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
datafusion-spark = { workspace = true }
datafusion-functions-json = { workspace = true }
arrow-flight = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rand = { workspace = true }
url = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
