[package]
name = "sail-execution"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-data-source = { path = "../sail-data-source" }
sail-server = { path = "../sail-server" }
sail-python-udf = { path = "../sail-python-udf" }
sail-object-store = { path = "../sail-object-store" }
sail-delta-lake = { path = "../sail-delta-lake" }
sail-iceberg = { path = "../sail-iceberg" }
sail-function = { path = "../sail-function" }
sail-logical-plan = { path = "../sail-logical-plan" }
sail-physical-plan = { path = "../sail-physical-plan" }
sail-telemetry = { path = "../sail-telemetry" }

thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tonic-prost = { workspace = true }
fastrace = { workspace = true }
tower = { workspace = true }
prost = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
datafusion-spark = { workspace = true }
datafusion-functions-json = { workspace = true }
arrow-flight = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rand = { workspace = true }
url = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }
