[package]
name = "sail-flight"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arrow Flight SQL server for Sail"

[[bin]]
name = "sail-flight"
path = "src/main.rs"

[dependencies]
# Sail crates
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-plan = { path = "../sail-plan" }
sail-sql-analyzer = { path = "../sail-sql-analyzer" }
sail-session = { path = "../sail-session" }

# Arrow / DataFusion
arrow = { workspace = true }
arrow-flight = { workspace = true }
datafusion = { workspace = true }

# Async / Server
tokio = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Config
figment = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
