[package]
name = "sail-function"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
sail-common = { path = "../sail-common" }
sail-common-datafusion = { path = "../sail-common-datafusion" }
sail-sql-analyzer = { path = "../sail-sql-analyzer" }

datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-expr-common = { workspace = true }
datafusion-functions = { workspace = true }
datafusion-functions-nested = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
lazy_static = { workspace = true }
twox-hash = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
cbc = { workspace = true }
base64 = { workspace = true }
num = { workspace = true }
half = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
jiter = { workspace = true }
serde_json = { workspace = true }
